# testproject

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: javascript.html  litepal.xml  test.html
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  VideoChannel.cpp  VideoChannel.h  WangYiFFmpeg.cpp  WangYiFFmpeg.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/res/anim/: alpha_anim.xml  rotate.xml  scale.xml  translate.xml
app/src/main/res/animator/: anim.xml  anima_bar.xml  anima_search.xml  animator.xml  obj_animator_left.xml  obj_animator_right.xml  path_change.xml
app/src/main/res/drawable/: anima_vector.xml  breakfast_bg_item_boxtype_num.xml  circle_orange.xml  fiveline.xml  fivestar.xml  ic_baseline_compare_arrows_24.xml  ic_child.xml  ic_tshirt.xml  path_change_av.xml  ripp.xml  searchbar.xml  searchbar_av.xml  test_vector.xml  vd_selector.xml  zhen.xml
app/src/main/res/layout/: activity_adapter.xml  activity_aidl.xml  activity_annotation.xml  activity_architecture.xml  activity_base.xml  activity_binder.xml  activity_class.xml  activity_constraint_layout_test.xml  activity_custom.xml  activity_data_binding.xml  activity_dh.xml  activity_gps2.xml  activity_handler.xml  activity_hybrid.xml  activity_kotlin.xml  activity_launch.xml  activity_lite_pal.xml  activity_main.xml  activity_media_scanner.xml  (+15 more)
app/资料/: Android虚拟机原理01（虚拟机介绍).md  Android虚拟机原理03（虚拟机执行内存与回收）.md  Android虚拟机原理05(dex指令解读).md
(+276 files in other folders)
